# autoresearch

./: .env  .gitignore  other_model..py  prepare.py  program.md  pyproject.toml  submit_best.py  train.py
