[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous translation research swarm for Kaggle"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub",
    "pandas>=2.3.3",
    "rustbpe>=0.1.0",
    "sacrebleu",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
